# fma-common

./: .aci.yml  .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md
.circleci/: config.yml
.circleci/images/primary/: Dockerfile
.github/workflows/: ci.yml
ci/: github_ci.sh
ci/gh-actions/ubuntu-latest/: Dockerfile
cpplint/: README.md  check_all.sh  check_code_style.sh  cpplint.py  pre-push
docs/: _index.md  fma_stream.md  text_parser.md  text_writer.md
fma-common/: CPPLINT.cfg  atomic_ops.h  binary_buffer.h  binary_read_write_helper.h  bounded_queue.h  buffered_file_stream.h  cache_aligned_vector.h  check_date.h  configuration.h  data_file.h  date.h  encrypt.h  env.h  file_stream.h  file_system.h  fma_stream.h  hard_array_linux.h  hard_array_windows.h  hard_container.h  hardware_info.h  leveled_log_device.h  libhdfs_stream.h  local_file_stream.h  logger.h  logging.h  multi_disk_stream.h  mysql_stream.h  option.h  pipe_stream.h  piped_hdfs_stream.h  pipeline.h  predefs.h  rotating_file_log_device.h  rotating_files.h  rw_lock.h  snappy_stream.h  snappy_util.h  stream_base.h  stream_buffer.h  string_formatter.h  (+10 more)
libhdfs/: classpath.txt
libhdfs3/: hdfs-client.xml  hdfs.h
msvc/: fma_common.sln
msvc/test/: test.vcxproj  test.vcxproj.filters
test/: CMakeLists.txt  main.cpp  test_arg_parse.cpp  test_binary_read_write_helper.cpp  test_bounded_queue.cpp  test_cache_aligned_vector.cpp  test_configuration.cpp  test_data_file.cpp  test_date.cpp  test_encrypt.cpp  test_file_stream.cpp  test_file_system.cpp  test_fma_stream.cpp  test_hard_container.cpp  test_hardware_info.cpp  test_level_log.cpp  test_leveled_log_device.cpp  test_logging.cpp  test_many_streams.cpp  test_multi_disk_stream.cpp  test_piped_hdfs_stream.cpp  test_pipeline.cpp  test_rotating_file_log_device.cpp  test_rotating_files.cpp  test_rw_lock.cpp  test_snappy_stream.cpp  test_stream_buffer.cpp  test_string_util.cpp  test_text_dir_stream.cpp  test_text_parser.cpp  test_text_parser_utils.cpp  test_text_writer.cpp  test_thread_pool.cpp  test_timed_task.cpp  test_type_traits.cpp  test_utils.cpp
